--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample</title>
+    <link rel="stylesheet" href="style.css">
+    <title>QUIZ APP</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="alert">Alert</div>
+    <div class="btn startBtn">Start</div>
+    <div class="container">
+        <h1>Let's Play a Quiz Game</h1>
+        <div class="question"></div>
+        <div class="choices"></div>
+        <button class="btn nextBtn">Next</button>
+        <div class="scoreCard"></div>
+        <div class="timer"></div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
